properly fix home image whitespace

--- a/css/site.styl
+++ b/css/site.styl
@@ -96,10 +96,10 @@ img
 
 .home-work-contents
   position: relative
-  font-size: 0
 
 .home-work-image
   position: relative
+  display: block
 
 .home-work-details
   position: absolute
